--- a/css/style.css
+++ b/css/style.css
@@ -81,6 +81,22 @@ h1 {
   text-decoration: underline;
 }
 
+.contacts a {
+  margin-right: 1rem;
+  text-decoration: none;
+  color: #0066cc;
+  font-weight: bold;
+  display: inline-flex;
+  align-items: center;
+  gap: 0.4rem;
+}
+
+.contacts a img.icon {
+  width: 16px;   
+  height: 16px;
+  object-fit: contain;
+}
+
 /* Sections */
 .section-title {
   font-size: 1.4rem;
